--- a/ciclo3/config/config.json
+++ b/ciclo3/config/config.json
@@ -1,8 +1,8 @@
 {
   "development": {
     "username": "root",
-    "password": "example",
-    "database": "bdciclo3",
+    "password": "root",
+    "database": "dbciclo3",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
